--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -47,7 +47,7 @@
             "refresh": "refresh the video",
             "alertson": "play sound whenever defined words are written in chat",
             "alertsoff": "stop playing sound when defined words are written in chat",
-            "curate": "add current song to your selected playlist",
+            "grab": "add current song to your selected playlist",
             "getpos": "get current waitlist position",
             "version": "displays version number",
             "commands": "shows this list",
@@ -70,15 +70,15 @@
         "header": "Chat Notifications",
         "join": "User Join",
         "leave": "User Leave",
-        "curate": "User Curate",
+        "grab": "User Grab",
         "meh": "User Mehs",
         "stats": "Song Stats",
         "updates": "Song Updates",
         "history": "Songs in history",
         "songLength": "Song Length (%1 min)",
         "message": {
-            "curate": "%1 added %2 - %3",
-            "stats": "Stats: %1 woots -- %2 mehs -- %3 curates",
+            "grab": "%1 grabbed %2 - %3",
+            "stats": "Stats: %1 woots -- %2 mehs -- %3 grabs",
             "updates": "Now Playing: %1 by %2<br>Played by: %3",
             "meh": "%1 meh'd this track",
             "join": {
